<resources>
    <string name="app_name">FirebasePhoneAuth</string>

    <string name="help_text">Tap Next to verify your account with your phone number.
        You don\'t need to manually enter verification code if the number install in this phone...</string>

    <string name="enter_code">Enter the code that was send to</string>
    <string name="not_code">I didn\'t get a code</string>

    <string name="terms_privacy">Tap Continue to accept our Terms,Data Policy, cookie use and the Privacy Policy and Terms of Service...</string>
    <string name="congratulations">Congratulation your number is verified click Continue to create your profile</string>
</resources>
