<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <com.shuhart.stepview.StepView
                android:id="@+id/step_view"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:sv_animationType="All"
                app:sv_stepPadding="12dp"
                app:sv_steps="@array/steps"
                app:sv_typeface="@font/fonts_catamaran_regular"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Your Mobile Number"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:padding="10dp"
                    android:inputType="phone"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_main_background"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_code"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/phoneNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+255719882193"
                android:textColor="#019b77"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PinWidget.PinView"
                android:padding="10dp"
                android:inputType="number"
                android:layout_marginTop="40dp"
                android:textColor="#222222"
                android:textSize="18sp"
                android:cursorVisible="true"
                app:cursorColor="@color/colorAccent"
                app:cursorWidth="2dp"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="36dp"
                app:lineColor="#2f64ba"
                app:lineWidth="2dp"
                app:viewType="rectangle"/>

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main_background"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="25dp"
                android:text="Continue"
                android:textColor="@android:color/white"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:indeterminate="true"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_code"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="#019b77"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_privacy"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#00A99D">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/panda_dribbble"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/continue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_main_background"
                android:text="Continue"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>